# HuBMAP---Hacking-the-Kidney

./: README.md  pyproject.toml  requirements.txt
src/: augmentations.py  config.py  losses.py  model.py  predict.py  test.py  train.py
src/test/: test_config.py  test_model.py  test_predict.py  treat_train_pipeline.py
test/: test_augmentation.py  test_losses.py
